feat: add 7 new modules + 330+ knowledge files + markdown plugins + getting-started env configs